2004-02-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/gtk-demo/main.rb: Don't show a warning message when 
	"Tree View" is choosed.
	* src/rbgdkwindow.c: Fixed Gdk::Window#(set_)decorations, 
	#(set_)functions, #(set_)events reported by gabriele renzi. 
	* sample/testgtk/notebook.rb: Fixed bugs reported by gabriele renzi.
	* sample/misc/label.rb: Fix a warning repoted by gabriele renzi.
	* sample/misc/toolbar.rb: Fix a typo reported by gabriele renzi.
	* src/rbgtktextappearance.c: Add Gtk::TextAppearance.
	* src/rbgtktextattributes.c: Add all accessors.
	* src/gtk2.def, rbgtk.h: Add rbgtk_text_appearance_get_type.

2004-02-11  Dafydd Harries <daf@muse.19inch.net>

	* src/rbgtkcontainer.c: Add Gtk::Container#<< as an alias of #add.
	* src/rbgtktreepath.c, src/rbgtktreeiter.c: Add Gtk::TreePath#to_s,
	Gtk::TreeIter#to_s as aliases of #to_str.

2004-02-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextattributes.c: Remove Gtk::TextAttributes#copy
	(Use Gtk::Boxed#copy instead).

2004-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtksettings.c: Add Gtk::Setting.rc_property_parse_*.
	* sample/misc/settings.rb: Added.

2004-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcontainer.c: Change arguments of Gtk::Container.install_child_property.
	* sample/misc/properties.rb: ditto.
	
2004-01-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcontainer.c: Add Gtk::Container.install_child_property.
	* sample/misc/properties.rb: Added.
	* src/lib/gtk2.rb: Require Atk module.

2004-01-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/style_property.r[bc]: Added.
	* src/rbgtkwidget.c: gtk_widget_class_install_style_property_parser() 
	was implemented as Gtk::Widget.install_style_property(){...}.

2004-01-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Fix Gtk::Widget.style_properties.

2004-01-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Add Gtk::Widget.install_style_property, 
	.style_property.
